fixing product alignment
fixing product alignment, working on scaling product cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,18 @@
+/* Variables */
 @font-face {
     font-family: Anarchy;
     src: url(fonts/AgainstMyself.ttf);
 }
 
 
+@row-width {
+  
+}
+
+
+/*---------------------*/
+
+/* Nav */
 nav{
     
     height: 100px;
@@ -17,21 +26,21 @@ nav{
 
 
 nav ul{
-    
+    align-items:baseline;
     list-style: none;
     flex-grow: 1;
     height: 100%;
 }
 
 nav ul li{
-    height: 100%;
+    
     width: 100%;
 }
 
 nav ul li a{
     
     
-    line-height: 150px;
+    
 
     text-align: center;
     
@@ -40,8 +49,8 @@ nav ul li a{
 
 /* SNARE logo in nav */
 nav ul li a img{
-    width: 100%;
-    height: 100%;
+    width: 185px;
+    
     
     
     
@@ -56,31 +65,28 @@ nav ul li a img{
 
 .flex-container {
     display: flex;
-    justify-content: space-around; 
+    
     align-items: center; 
     margin-top: 50px; /* Adjust as needed */
   }
   
-  .itemCard {
-    width: 190px; 
-    height: 254px; 
-    margin: 0 10px; 
-    
-  }
+  
 
-.container {
+.card-container {
   position: relative;
   width: 190px;
   height: 254px;
   transition: 200ms;
+  margin: auto;
 }
 
-.container:active {
+.card-container:active {
   width: 180px;
   height: 245px;
 }
 
 #card {
+
   position: absolute;
   inset: 0;
   z-index: 0;
@@ -149,7 +155,7 @@ nav ul li a img{
   filter: brightness(1.1);
 }
 
-.container:hover #card::before {
+.card-container:hover #card::before {
   transition: 200ms;
   content: '';
   opacity: 80%;
